<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/alphabets"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="#66bb6a"
            android:text="@string/alphabets" />

        <TextView
            android:id="@+id/numbers"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="#fff176"
            android:text="@string/numbers" />

        <TextView
            android:id="@+id/family"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="#ff8a65"
            android:text="@string/family" />

        <TextView
            android:id="@+id/convo"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="#a1887f"
            android:text="@string/convo" />

        <TextView
            android:id="@+id/phrases"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="#29b6f6"
            android:text="@string/phrases" />

        <TextView
            android:id="@+id/words"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="#e040fb"
            android:text="@string/words" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            style="@style/Text"
            android:text="@string/feedback"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:background="#90caf9"
            android:onClick="feedback"/>


    </LinearLayout>
</ScrollView>