<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConvoActivity"
    android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Text"
            android:text="@string/convo1"
            android:background="#e57373"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Text"
            android:text="@string/convo2"
            android:background="#ffee58"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Text"
            android:text="@string/convo3"
            android:background="#ff5722"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Text"
            android:text="@string/convo4"
            android:background="#4dd0e1"
            android:textColor="@android:color/black"/>


    </LinearLayout>
